# catalog-preview

./: LICENSE  README.md  pyproject.toml  requirements.txt
garden/ggdc/2020-10-01/ggdc_maddison/: README.md  explore.ipynb  index.json  maddison_gdp.feather  maddison_gdp.meta.json  maddison_gdp.parquet
